<resources>
    <string name="app_name">Khatabook 2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">signup</string>
    <string name="connect_with">Connect with</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="history">History</string>

</resources>