<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="khatabook"
            type="com.example.khatabook_20.model.KhataBook" />
        <variable
            name="signInViewModel"
            type="com.example.khatabook_20.auth.signin.SignInViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">

        <EditText
            android:id="@+id/fragment_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginRight="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/email"
            android:text="@={khatabook.email}"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_register_username" />

        <EditText
            android:id="@+id/fragment_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:text="@={khatabook.password}"
            android:inputType="textPassword"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_register_email" />


        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-thin"
            android:text="@string/signup"
            android:onClick="@{() -> signInViewModel.register(khatabook.email,khatabook.password)}"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_register_password" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup" />

        <View
            android:id="@+id/view1"
            android:layout_width="125dp"
            android:layout_height="0.1dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="#7E7979"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup" />

        <View
            android:id="@+id/view2"
            android:layout_width="125dp"
            android:layout_height="0.1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:background="#7E7979"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/signup" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/connect_with"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview1" />

        <ImageView
            android:id="@+id/signupwithgoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/google"
            app:layout_constraintEnd_toStartOf="@+id/signupwithfacebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/signupwithfacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="96dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signupwithgoogle"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
